data/all_generated_tests/raw_wast_tests/br_table_InfiniteLoops_2196.wast
;; 6. **Test 6: Forward Branching in a Loop**    - Description: Test a loop where `br_table` performs forward branching to a block outside the loop.    - Specific Constraint: Ensure forward branches target correct blocks and exit the loop properly.    - Infinite Loop Relation: Incorrect forward branching can cause the loop to not terminate.

(assert_invalid
  (module
    (func (param i32) (result i32)
      (loop (result i32)
        (block (result i32)
          (br_table 0 1 1 (local.get 0))
        )
      )
    )
  )
  "type mismatch"
)